--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -6,7 +6,8 @@ John Thompson;
 
 Sample application demonstrating how to use Spring REST Docs with JUnit 5.
 
-`BeerOrderControllerTest` makes a call to a very simple service and produces three documentation snippets.
+`BeerOrderControllerTest` makes a call to a very simple service and produces three
+documentation snippets.
 
 One showing how to make a request using cURL:
 
